fixed the github icon not showing up

--- a/ckanext/justicehub_theme/public/jh_home_new1.css
+++ b/ckanext/justicehub_theme/public/jh_home_new1.css
@@ -611,11 +611,11 @@ footer h3 {
   cursor: pointer;
 }
 
-.footer__branding_social.github {
+.github {
   background-color: black;
 }
 
-.footer__branding_social.github img {
+.github img {
   width: 27px;
   height: 27px;
 }
